Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/Enterprise_scheme__c.object-meta.xml
<CustomObject>
    <label>Enterprise scheme</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>