Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/fields/GTM_Tier__c.field-meta.xml
<CustomField>
    <fullName>GTM_Tier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tier</label>
    <referenceTo>GTM_Tier__c</referenceTo>
    <relationshipLabel>Enterprise schemes</relationshipLabel>
    <relationshipName>Enterprise_schemes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>