Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/fields/Point_equivalent__c.field-meta.xml
<CustomField>
    <fullName>Point_equivalent__c</fullName>
    <label>Point equivalent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>