Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Enterprise schemes</relationshipLabel>
    <relationshipName>Enterprise_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>