Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/fields/Unique_field__c.field-meta.xml
<CustomField>
    <fullName>Unique_field__c</fullName>
    <label>Unique field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>