Partial_14Dec2021/force-app/main/default/objects/Enterprise_scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>GTM_Tier__c</columns>
    <columns>Growth_type__c</columns>
    <columns>Amount__c</columns>
    <columns>Point_equivalent__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Is_active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>